syntax = "proto3";

package ai.lzy.v1;

import "ai/lzy/v1/workflow/workflow.proto";

option java_outer_classname = "LSS";
option java_package = "ai.lzy.v1";

service LzyStorageService {
  rpc CreateS3Bucket (CreateS3BucketRequest) returns (CreateS3BucketResponse);
  rpc DeleteS3Bucket (DeleteS3BucketRequest) returns (DeleteS3BucketResponse);

  rpc GetS3BucketCredentials (GetS3BucketCredentialsRequest) returns (GetS3BucketCredentialsResponse);
}

message CreateS3BucketRequest {
  string userId = 1;
  string bucket = 2;
  // TODO: size limit, ttl and other settings
}

message CreateS3BucketResponse {
  oneof credentials {
    ai.lzy.v1.workflow.AmazonCredentials amazon = 1;
    ai.lzy.v1.workflow.AzureCredentials azure = 2;
  }
}

message DeleteS3BucketRequest {
  string bucket = 1;
}

message DeleteS3BucketResponse {
}

message GetS3BucketCredentialsRequest {
  string userId = 1;
  string bucket = 2;
}

message GetS3BucketCredentialsResponse {
  oneof credentials {
    ai.lzy.v1.workflow.AmazonCredentials amazon = 1;
    ai.lzy.v1.workflow.AzureCredentials azure = 2;
  }
}
